--- a/src/app/components/dashboard/alumnos/alumnos.component.html
+++ b/src/app/components/dashboard/alumnos/alumnos.component.html
@@ -1,63 +1,58 @@
 <div class="container">
-    <mat-toolbar>
-        <span>Alumnos</span>
-        <div class="spacer"></div>
-          <button mat-raised-button color="primary" routerLink="/dashboard/crear-alumno">Agregar Alumno</button>    
-    </mat-toolbar>
+  <mat-toolbar>
+    <span>Alumnos</span>
+    <div class="spacer"></div>
+    <button mat-raised-button color="primary" routerLink="/dashboard/crear-alumno">Agregar Alumno</button>
+  </mat-toolbar>
 
-    <div *ngIf="listAlumnos.length > 0">
-      <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input autocomplete="off">
-      </mat-form-field>
-  
-      <div class="mat-elevation-z4">
-        <table mat-table [dataSource]="dataSource" matSort>
-            <!-- Position Column -->
-            <ng-container matColumnDef="usuario">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
-              <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
-            </ng-container>
-          
-            <!-- Name Column -->
-            <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
-              <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
-            </ng-container>
-          
-            <!-- Weight Column -->
-            <ng-container matColumnDef="apellido">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Apellido </th>
-              <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
-            </ng-container>
-          
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="curso">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header> Curso </th>
-              <td mat-cell *matCellDef="let element"> {{element.curso}} </td>
-            </ng-container>
-    
-            <ng-container matColumnDef="acciones">
-                <th mat-header-cell *matHeaderCellDef>  </th>
-                <td mat-cell *matCellDef="let element; let i = index" style="text-align: right;"> 
-                    <a class="pointer" style="color: #e15639;" matTooltip="Eliminar Alumno" (click)="eliminarAlumno(i)">
-                        <mat-icon>delete</mat-icon>
-                    </a>
-                </td>
-              </ng-container>
+  <div *ngIf="listAlumnos.length > 0">
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input autocomplete="off">
+    </mat-form-field>
 
-              <ng-container matColumnDef="editar">
-                <th mat-header-cell *matHeaderCellDef> Editar </th>
-                <td mat-cell *matCellDef="let element">
-                  <button mat-raised-button color="accent" (click)="editarAlumno(element)">Editar</button>
-                </td>
-              </ng-container>
-          
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-          <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-      </div>
+    <div class="mat-elevation-z4">
+      <table mat-table [dataSource]="dataSource" matSort>
+        <!-- Usuario Column -->
+        <ng-container matColumnDef="usuario">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
+          <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
+        </ng-container>
+
+        <!-- Nombre y Apellido Column -->
+        <ng-container matColumnDef="nombreApellido">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre Completo </th>
+          <td mat-cell *matCellDef="let element"> {{element | fullNamePipe}} </td>
+        </ng-container>
+
+        <!-- Curso Column -->
+        <ng-container matColumnDef="curso">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Curso </th>
+          <td mat-cell *matCellDef="let element"> {{element.curso}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="acciones">
+          <th mat-header-cell *matHeaderCellDef>  </th>
+          <td mat-cell *matCellDef="let element; let i = index" style="text-align: right;">
+            <a class="pointer" style="color: #e15639;" matTooltip="Eliminar Alumno" (click)="eliminarAlumno(i)">
+              <mat-icon>delete</mat-icon>
+            </a>
+          </td>
+        </ng-container>
+
+        
+        <ng-container matColumnDef="editar">
+          <th mat-header-cell *matHeaderCellDef> Editar </th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-raised-button color="accent" (click)="editarAlumno(element)">Editar</button>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
-    <h2 *ngIf="listAlumnos.length == 0">No quedan alumnos para mostrar</h2>
+  </div>
+  <h2 *ngIf="listAlumnos.length == 0">No quedan alumnos para mostrar</h2>
 </div>
