Ultimo commit proyecto terminado

--- a/src/app/components/dashboard/alumnos/editar-alumno/editar-alumno.component.scss
+++ b/src/app/components/dashboard/alumnos/editar-alumno/editar-alumno.component.scss
@@ -2,7 +2,7 @@
     mat-card {
       width: 100%;
       max-width: 600px; // Ajusta el ancho máximo según tus necesidades
-      margin: 0 auto; // Centra el card horizontalmente
+      margin: 20px; // Centra el card horizontalmente
     }
   
     .form-container {
