--- a/src/app/components/dashboard/navbar/navbar.component.html
+++ b/src/app/components/dashboard/navbar/navbar.component.html
@@ -10,7 +10,7 @@
             <button (click)="drawer.toggle()" mat-icon-button class="icon-hambur" aria-label="Example icon-button with menu icon">
                 <mat-icon>menu</mat-icon>
             </button>
-            <span class="app-tittle">ABM Estudiantes</span>
+            <span class="app-tittle" appFontSize20>ABM Estudiantes</span>
             <span class="spacer"></span>
             <button routerLink="/logout" mat-icon-button class="example-icon favourite-icon" aria-label="Example icon-button with heart icon">
                 <mat-icon>logout</mat-icon>
