--- a/src/app/components/dashboard/alumnos/alumnos.component.html
+++ b/src/app/components/dashboard/alumnos/alumnos.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <mat-toolbar>
-    <span>Alumnos</span>
+    <span appFontSize20>Alumnos</span>
     <div class="spacer"></div>
     <button mat-raised-button color="primary" routerLink="/dashboard/crear-alumno">Agregar Alumno</button>
   </mat-toolbar>
@@ -15,19 +15,19 @@
       <table mat-table [dataSource]="dataSource" matSort>
         <!-- Usuario Column -->
         <ng-container matColumnDef="usuario">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header appFontSize20> Usuario </th>
           <td mat-cell *matCellDef="let element"> {{element.usuario}} </td>
         </ng-container>
 
         <!-- Nombre y Apellido Column -->
         <ng-container matColumnDef="nombreApellido">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre Completo </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header appFontSize20> Nombre Completo </th>
           <td mat-cell *matCellDef="let element"> {{element | fullNamePipe}} </td>
         </ng-container>
 
         <!-- Curso Column -->
         <ng-container matColumnDef="curso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Curso </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header appFontSize20> Curso </th>
           <td mat-cell *matCellDef="let element"> {{element.curso}} </td>
         </ng-container>
 
@@ -42,7 +42,7 @@
 
         
         <ng-container matColumnDef="editar">
-          <th mat-header-cell *matHeaderCellDef> Editar </th>
+          <th mat-header-cell *matHeaderCellDef appFontSize20> Editar </th>
           <td mat-cell *matCellDef="let element">
             <button mat-raised-button color="accent" (click)="editarAlumno(element)">Editar</button>
           </td>
@@ -54,5 +54,5 @@
       <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
     </div>
   </div>
-  <h2 *ngIf="listAlumnos.length == 0">No quedan alumnos para mostrar</h2>
+  <h2 *ngIf="listAlumnos.length == 0" appFontSize20>No quedan alumnos para mostrar</h2>
 </div>
