--- a/src/app/components/dashboard/alumnos/editar-alumno/editar-alumno.component.html
+++ b/src/app/components/dashboard/alumnos/editar-alumno/editar-alumno.component.html
@@ -1,38 +1,41 @@
 <div class="container">
-    <mat-toolbar>
-      <span>Editar Alumno</span>
-    </mat-toolbar>
-  
-    <mat-card style="margin-top: 10px;" appearance="outlined">
-      <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="guardarCambios()">
-          <div class="form-container">
-            <mat-form-field class="full-width">
-              <mat-label>Nombre</mat-label>
-              <input autocomplete="off" matInput formControlName="nombre">
-            </mat-form-field>
-  
-            <mat-form-field class="full-width">
-              <mat-label>Apellido</mat-label>
-              <input autocomplete="off" matInput formControlName="apellido">
-            </mat-form-field>
-  
-            <mat-form-field class="full-width">
-              <mat-label>Curso</mat-label>
-              <mat-select formControlName="curso">
-                <mat-option *ngFor="let item of curso" [value]="item">
-                  {{item}}
-                </mat-option>
-              </mat-select>
-            </mat-form-field>
-  
-            <div class="button-container">
-              <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Guardar</button>
-              <button mat-raised-button (click)="cancelar()">Cancelar</button>
-            </div>
-          </div>
-        </form>
-      </mat-card-content>
-    </mat-card>
-  </div>
+    <div >
+        <mat-toolbar>
+          <span>Editar Alumno</span>
+        </mat-toolbar>
+      
+        <mat-card style="margin-top: 10px;" appearance="outlined">
+          <mat-card-content>
+            <form [formGroup]="form" (ngSubmit)="guardarCambios()">
+              <div class="form-container">
+                <mat-form-field class="full-width">
+                  <mat-label>Nombre</mat-label>
+                  <input autocomplete="off" matInput formControlName="nombre">
+                </mat-form-field>
+      
+                <mat-form-field class="full-width">
+                  <mat-label>Apellido</mat-label>
+                  <input autocomplete="off" matInput formControlName="apellido">
+                </mat-form-field>
+      
+                <mat-form-field class="full-width">
+                  <mat-label>Curso</mat-label>
+                  <mat-select formControlName="curso">
+                    <mat-option *ngFor="let item of curso" [value]="item">
+                      {{item}}
+                    </mat-option>
+                  </mat-select>
+                </mat-form-field>
+      
+                <div class="button-container">
+                  <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Guardar</button>
+                  <button mat-raised-button (click)="cancelar()">Cancelar</button>
+                </div>
+              </div>
+            </form>
+          </mat-card-content>
+        </mat-card>
+      </div>
+
+</div>
   
