Se agrego los servicios, bd de node json y funcionalidad completa

--- a/src/app/components/dashboard/alumnos/alumnos.component.html
+++ b/src/app/components/dashboard/alumnos/alumnos.component.html
@@ -43,8 +43,8 @@
         
         <ng-container matColumnDef="editar">
           <th mat-header-cell *matHeaderCellDef appFontSize20> Editar </th>
-          <td mat-cell *matCellDef="let element">
-            <button mat-raised-button color="accent" (click)="editarAlumno(element)">Editar</button>
+          <td mat-cell *matCellDef="let element; let i = index">
+            <button mat-raised-button color="accent" (click)="editarAlumno(element, i)">Editar</button>
           </td>
         </ng-container>
 
