--- a/src/app/components/dashboard/inscripciones/inscripciones.component.scss
+++ b/src/app/components/dashboard/inscripciones/inscripciones.component.scss
@@ -1,15 +1,13 @@
-/* styles.scss */
 .success-snackbar {
-    background-color: #4caf50; /* Verde para éxito */
+    background-color: #4caf50; 
     color: white;
   }
   
   .error-snackbar {
-    background-color: #f44336; /* Rojo para error */
+    background-color: #f44336;
     color: white;
   }  
   
- /* inscripciones.component.scss */
 .inscripciones-card {
     max-width: 600px;
     margin: 20px auto;
